[package]
name = "stakker_mio"
version = "0.2.4"
authors = ["Jim Peters <jim@uazu.net>"]
edition = "2018"

description = "Mio I/O polling integration for the Stakker crate"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/stakker_mio"
documentation = "https://docs.rs/stakker_mio"

keywords = [ "mio", "event-loop", "stakker" ]
categories = [ "asynchronous", "network-programming" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
stakker = { version = "0.2", path = "../stakker" }
slab = "0.4"

[dependencies.mio]
version = "0.8"
features = ["os-poll", "os-ext", "net"]
